--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "src": "/public/index.php",
-            "use": "vercel-php@0.6.1"
+            "use": "@vercel/php@0.7.1",
+            "config": {
+                "convertLaravelRequestToVercelRequest": true
+            }
         }
     ],
     "routes": [
