--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "/public/index.php",
-            "use": "@vercel/php@0.7.1",
+            "use": "vercel-php@0.7.0",
             "config": {
                 "convertLaravelRequestToVercelRequest": true
             }
